[package]
name = "fenrir"
version = "0.1.9"
edition = "2021"

[lib]
crate-type = ["cdylib"]



[dependencies]
pyo3 = { version = "0.21", features = ["extension-module"] }
image = "0.24"
tiff = "0.9"
tempfile = "3"
egui = "0.28"
eframe = { version = "0.28", features = ["wgpu"] }
winit = { version = "0.29", default-features = true }
